# automatic_fetching

./: .gitignore  Readme.md  expected_number_of_files_per_collection.txt  links.txt  links_to_collections.txt  links_to_collections_missing.txt  missing_collections.txt  missing_or_mismatched.txt  number_of_files.txt  number_of_files_in_download_directory_combined.txt  number_of_files_in_download_directory_hasan.txt  number_of_files_in_download_directory_pc21.txt  number_of_files_in_download_directory_pc_21.txt  pyproject.toml  setup.py  total_number_of_files_expected.txt
automatic_fetching/: check_for_missing_files-default.py  check_for_missing_files.py  command_line.py  config.py  count_total_number_of_options_from_file.py  download_files_using_collection_links.py  fetch_collection_urls.py  fetch_urls.py  file_count.py  filter_missing_entries.py  get_number_of_files_for_each_collection.py
