[build-system]
requires = ["setuptools>=64", "setuptools-scm<8"]
build-backend = "setuptools.build_meta"

[project]
name = "automatic_fetching"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 5 - Production/Stable',

    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Natural Language :: English',

    'License :: OSI Approved :: GNU General Public License (GPL)',
]
dependencies = [
    'beautifulsoup4',
    "pydantic_settings",
    "requests",
    "click"
]

[project.scripts]
fetch_images = "automatic_fetching.command_line:main"
fetch_urls = "automatic_fetching.fetch_urls:main"
file_count = "automatic_fetching.file_count:main"

[tool.pytest.ini_options]
addopts = "--cov-report xml --cov-report term --cov=automatic_fetching"

[tool.setuptools]
packages = ["automatic_fetching"]